--- a/css/style.css
+++ b/css/style.css
@@ -1095,6 +1095,110 @@ footer .row1 {
     margin-top: 1rem;
 }
 
+.dangerWarning {
+    border-radius: 10px;
+    padding: 2rem 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-bottom: 5rem;
+    height: 69%;
+    padding-top: 1.5rem;
+}
+
+.dangerWarning .dangerTriangle {
+    background-color: white;
+    width: 100%;
+    height: 8rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px;
+    clip-path: polygon(48% 26%, 0 100%, 100% 100%);
+    padding-top: 3rem;
+    margin-top: -2rem;
+}
+
+.dangerWarning .dangerTriangle > .redBar {
+    width: .6rem;
+    height: 3rem;
+    margin-left: -.2rem;
+}
+
+.dangerWarning .dangerText {
+    margin-left: .5rem;
+}
+.dangerWarning .dangerText .fa-dollar-sign {
+    color: white;
+    font-size: 2.5rem;
+    text-align: center;
+    display: block;
+    width: 100%;
+    margin-bottom: .5rem;
+}
+
+.dangerWarning .dangerText p{
+    color: white;
+    font-size: .95rem;
+}
+
+.osi__content {
+    align-items: flex-start;
+}
+
+
+
+.osi__content .column1{
+    border: 1px solid lavender;
+    padding: 1rem;
+    margin-top: 2rem;
+    border-radius: 8px;
+}
+
+.osi__content .column1 > h3 {
+    font-size: 1.3rem;
+    margin-bottom: 2rem;
+}
+.osi__content .column2 .row-1 > div {
+    background-color: lavender;
+    position: relative;
+}
+
+.osi__content .column2 .row-1 .column-1 > .imgContainer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+    position: relative;
+}
+
+.osi__content .column2 .row-1 .column-1 > .imgContainer > h1 {
+    font-size: 1.6rem;
+    margin-top: -50%;
+}
+
+.osi__content .column2 .row-1 .column-1 > .imgContainer > img {
+    width: 14rem;
+    height: 14rem;
+}
+
+.osi__content .column2 .row-1 .column-1 h4 {
+    position: absolute;
+    top: -1.2rem;
+}
+
+.osi__content .column2 .row-1 > button {
+    background-color: var(--primary-color);
+    color: white;
+    font-size: 1rem;
+    padding: 5px 24px;
+    border-radius: 5px;
+    border: none;
+    margin: 1rem auto 3rem;
+    cursor: pointer;
+    margin-left: 60%;
+}
+
 footer .row1 h3 {
     margin-bottom: 1rem;
 }
